# shayona-relay

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_windows.sh  deploy.sh  diesel.toml  docker-compose.prod.yaml  docker-compose.yaml  dump-checkpostingdb.sql  execute_local.sh  index.js  rust.dockerfile
publish/: .env  docker-compose.prod.yaml  start_relay.bat
src/: main.rs  schema.rs  server.rs
src/database/: connection.rs  models.rs  schema.rs
src/routes/: analytics_routes.rs  checks_routes.rs  config_routes.rs  database.rs  db_routes.rs  mod.rs  osb_routes.rs  relay_routes.rs
