[package]
name = "shayona-kiosk-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
dotenv = "0.15.0"
mysql = "*"
paris = { version = "*", features = ["timestamps", "macros"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
diesel = { version = "2.2.0", features = ["mysql"] }
# build libmysqlclient as part of the build process
# uncomment this line if you run into setup issues
# mysqlclient-sys = { version = "0.4", features = ["bundled"] }

#[build]
#target = "x86_64-pc-windows-gnu"
#target = "x86_64-apple-darwin"

#[target.x86_64-pc-windows-gnu]
#linker = "x86_64-w64-mingw32-gcc"