[package]
name = "shayona-kiosk-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
dotenv = "0.15.0"
mysql = "*"
paris = { version = "*", features = ["timestamps", "macros"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
diesel = { version = "2.2.0", features = ["mysql", "128-column-tables"] }
mysqlclient-sys = { version = "0.4", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }