[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
dotenv = "0.15.0"
mysql = "*"
paris = { version = "*", features = ["timestamps", "macros"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
mysqlclient-sys = { version = "*" }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.43"
serde = "1.0.228"